<resources>
    <string name="app_name">CARFAX</string>
    <string name="vehicleImageViewDescription">Vehicle Image</string>
    <string name="callDealerButton">Call Dealer</string>
    <string name="vehicle_info">Vehicle Info</string>
    <string name="fuel">Fuel</string>
    <string name="engine">Engine</string>
    <string name="body_style">Body Style</string>
    <string name="transmission">Transmission</string>
    <string name="drive_type">Drive Type</string>
    <string name="interior_color">Interior Color</string>
    <string name="exterior_color">Exterior Color</string>
    <string name="location">Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tryAgain">Try Again</string>
    <string name="internetErrorMessage">Please connect to your internet or wifi and tap try again to continue.</string>
    <string name="textview"><![CDATA[Assignment -> Shrima]]></string>
</resources>